2012-01-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* unescaped string end-of-line warning

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* structured copyright
	* doc-base entry

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try watch again

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try watch again

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try out-of-date-standards-version

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try lintian possible-documentation,
	  Debian-watch-file-is-missing,
	  out-of-date-standards-version

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* prepare debian/changelog for next release

2012-01-04  Hendrik Tews <prooftree@askra.de>

	* release version 0.9 on 2012-01-04 20:39:05 UTC

2012-01-04  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2012-01-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix debian/changelog

2012-01-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix case where some existential is instantiated with
	  the last proof command
	* protocol change
	  - rename proof-complete into proof-finished and add
	    existential info
	  - add proof-complete message

2012-01-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* release version 0.8 on 2012-01-03 10:11:10 UTC

2012-01-03  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* separate INSTALL
	* make-release update

2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update README, changes, man page

2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* clean up copyright
	* packaging in make-release

2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* DESTDIR
	* copyright 2012
	* add make-release
	* add debian subdir

2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* protocol change: configure message required as first
	  message
	* set protocol version to 1